# crypto_bot

./: .commands  Cargo.toml  build.rs
migrations/2023-10-19-171057_text_fieds/: down.sql  up.sql
migrations/2023-12-06-165019_tokens_and_tg_bot_list/: down.sql  up.sql
migrations/2023-12-22-162925_repeat_traders_token_amount/: down.sql  up.sql
migrations/2024-03-05-171213_add_profit_column/: up.sql
settings/: db  snap.00000000000003BF
src/: common.rs  db.rs  main.rs  repeater.rs  request.rs  schema.rs  telegram.rs  trader.rs
src/abi/: erc20.json  erc_20_token.rs  mod.rs  pancake.rs
