[package]
name = "crypto_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version="1.32.0", features=["macros", "rt-multi-thread", "sync"] }
reqwest = { version="0.11.20", features=["json"] }
serde = { version="1", features=["derive"] }
serde_json = "1.0.107"
ethers = { version="2.0.10", features=[ "ws" ] }
strum = { version="0.25.0", features=["strum_macros"] }
diesel = { version = "2.1.0", features = ["postgres", "r2d2"] }
dotenvy = "0.15"
sha2 = "0.10.8"
anyhow = "1.0.75"
thiserror = "1.0.49"
tracing = "0.1.40"
tracing-appender = "0.2.2"
tracing-subscriber = { version="0.3.17", features=["fmt"] }
tracing-panic = "0.1.1"
lazy_static = "1.4.0"
teloxide = { version = "0.12", features = ["macros"] }
kv = { version = "0.24.0", features = ["json-value"] }

[build-dependencies]
ethers = "2.0.10"